kubernetes/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: king-repbot
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: king-repbot
