kubernetes/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: king-repbot
  annotations:
    # nginx ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "king-repbot.static.onboarding.dev"

spec:
  rules:
  - host: king-repbot-api.onboarding.dev
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: king-repbot
            servicePort: http
  tls:
  - hosts:
    - king-repbot-api.onboarding.dev
    secretName: king-repbot-tls-secret
